# Python_projects

./: README.md  ft_analytics_dashboard.py
CallMeMaybe/: .gitignore  README.md  makefile  pyproject.toml
CallMeMaybe/src/: __init__.py  __main__.py  cli.py  decoder.py  errors.py  io_utils.py  llm_interface.py  models.py  pipeline.py  schema_utils.py
Python_Module_03/ex0/: README.md  ft_command_quest.py
Python_Module_03/ex1/: README.md  ft_score_analytics.py
Python_Module_03/ex2/: README.md  ft_coordinate_system.py
Python_Module_03/ex3/: README.md  ft_achievement_tracker.py
Python_Module_03/ex4/: README.md  ft_inventory_system.py
Python_Module_03/ex5/: README.md  ft_data_stream.py
Python_Module_03/ex6/: README.md  ft_analytics_dashboard.py
Python_module_01/: README.md
Python_module_01/ex0/: README.md  ft_garden_intro.py
Python_module_01/ex1/: README.md  ft_garden_data.py
Python_module_01/ex2/: README.md  ft_plant_growth.py
Python_module_01/ex3/: README.md  ft_plant_factory.py
Python_module_01/ex4/: README.md  ft_garden_security.py
Python_module_01/ex5/: README.md  ft_plant_types.py
Python_module_01/ex6/: README.md  ft_garden_analytics.py
Python_module_02/: README.md
Python_module_02/ex0/: README.md  (+1 more)
Python_module_04/: sample_data.json
Python_module_06/: README.md  ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
Python_module_07/: README.md  __init__.py
Python_module_08/: README.md
Python_module_08/ex1/: README.md  loading.py  pyproject.toml
Python_module_09/: README.md
(+79 files in other folders)
