[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Function calling with constrained decoding using Qwen/Qwen3-0.6B"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26,<3.0",
    "pydantic>=2.0,<3.0",
]

[dependency-groups]
dev = [
    "flake8>=7.0.0,<8.0.0",
    "mypy>=1.10.0,<2.0.0",
    "pytest>=8.0.0,<9.0.0",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"