[tool.poetry]
name = "matrix-loading"
version = "0.1.0"
description = "Matrix data loading and analysis tool"
authors = ["Zion Architect <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
